Add contributing guide and update extension metadata
Introduces CONTRIBUTING.md with detailed guidelines for contributors. Updates README to include a project icon and reference the new contributing guide. Adds author field to manifest.json. Options page now displays the extension version dynamically. Updates release scripts to reference 'Whorl' instead of '@Mention'.

--- a/options.html
+++ b/options.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Whorl</h1>
   <p class="extension-meta">
-    <span class="version">1.0.0</span>
+    <span class="version" id="extensionVersion"></span>
     <span class="separator">·</span>
     <span>Created by <a href="https://den.dev" target="_blank">Den Delimarsky</a></span>
     <span class="separator">·</span>
