--- a/src/options.html
+++ b/src/options.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Whorl Settings</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="icon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icon-16.png">
   <link rel="stylesheet" href="options.css">
 </head>
 <body>
